objects/Drink_Order__c.object
<CustomObject>
    <label>Drink Order</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Drink Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drink Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flavor__c</fullName>
        <label>Flavor</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mango</fullName>
                </value>
                <value>
                    <fullName>Chikoo</fullName>
                </value>
                <value>
                    <fullName>Sitaphal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>